# TerraEroder

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: basic_shader.shader  gouraud_mpv_terrain_face_normals.shader  gouraud_mpv_terrain_shader.shader  gouraud_mpv_terrain_single_color.shader  gouraud_mpv_terrain_trianglelines.shader  gouraud_mpv_water_over_terrain.shader  isolines_gouraud_mpv_terrain.shader  texture_shader.shader  texture_transform_shader.shader
src/: CMakeLists.txt  color.cpp  color.h  controller.cpp  display_controller.cpp  display_controller.h  erosion.cu  main.cpp  obj_files.cpp  obj_files.h  shape_factory.cpp  shape_factory.h  vibrate_kernel.cu
src/renderer/: CMakeLists.txt  CudaShape.cpp  CudaShape.h  glerrorhandler.h  indexbuffer.cpp  indexbuffer.h  material.cpp  material.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shape.cpp  shape.h  texture.cpp  vertexarray.cpp  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.h
